--- a/tests/resources/queries/create_table.sql.jinja2
+++ b/tests/resources/queries/create_table.sql.jinja2
@@ -75,6 +75,14 @@ CREATE EXTERNAL TABLE IF NOT EXISTS {{ schema }}.execute_many_pandas (
 ROW FORMAT DELIMITED FIELDS TERMINATED BY '\t' LINES TERMINATED BY '\n' STORED AS TEXTFILE
 LOCATION '{{ s3_staging_dir }}{{ schema }}/execute_many_pandas/';
 
+DROP TABLE IF EXISTS {{ schema }}.execute_many_pandas_unload_auto;
+CREATE EXTERNAL TABLE IF NOT EXISTS {{ schema }}.execute_many_pandas_unload_auto (
+  a INT,
+  b STRING
+)
+ROW FORMAT DELIMITED FIELDS TERMINATED BY '\t' LINES TERMINATED BY '\n' STORED AS TEXTFILE
+LOCATION '{{ s3_staging_dir }}{{ schema }}/execute_many_pandas_unload_auto/';
+
 DROP TABLE IF EXISTS {{ schema }}.execute_many_pandas_unload_pyarrow;
 CREATE EXTERNAL TABLE IF NOT EXISTS {{ schema }}.execute_many_pandas_unload_pyarrow (
     a INT,
